--- a/crud-angular-19-master/src/app/layout/main/main.component.html
+++ b/crud-angular-19-master/src/app/layout/main/main.component.html
@@ -1,10 +1,10 @@
-<div class="h-screen flex w-full border-blue-700">
+<div class="h-screen flex w-full">
     <!-- Categories -->
-    <app-category class="w-1/4 border-orange-700"/>
+    <app-category class="w-1/4"/>
 
     <!-- Divider -->
-    <mat-divider class="h-full opacity-50"/>
+    <mat-divider class="h-full opacity-50" vertical/>
 
     <!-- Tasks -->
-    <app-task class="w-3/4 border-green-700"/>
+    <app-task class="w-3/4"/>
 </div>
