--- a/crud-angular-19-master/src/app/features/tasks/view/task/task.component.html
+++ b/crud-angular-19-master/src/app/features/tasks/view/task/task.component.html
@@ -1,1 +1,9 @@
-<p>task works!</p>
+<div class="flex flex-col mx-10">
+    <!-- Title -->
+    <span class="font-bold text-4xl">My to do task board</span>
+
+    <!-- Form -->
+     <app-inclusion-form />
+
+    <!-- List of tasks-->
+</div>
