--- a/crud-angular-19-master/src/app/layout/main/main.component.html
+++ b/crud-angular-19-master/src/app/layout/main/main.component.html
@@ -6,5 +6,5 @@
     <mat-divider class="h-full opacity-50" vertical/>
 
     <!-- Tasks -->
-    <app-task class="w-3/4"/>
+    <app-task class="w-3/4 pt-10"/>
 </div>
