--- a/crud-angular-19-master/src/app/features/tasks/components/inclusion-form/include-task-form/include-task-form.component.html
+++ b/crud-angular-19-master/src/app/features/tasks/components/inclusion-form/include-task-form/include-task-form.component.html
@@ -1,13 +1,26 @@
-<form autocomplete="off" class="flex flex-row gap-2 select-none">
+<form 
+  [formGroup]="newTaskForm"
+  autocomplete="off" 
+  class="flex flex-row gap-2 select-none"
+>
   <mat-form-field class="w-full">
     <mat-label>Tasks</mat-label>
-    <input matInput placeholder="Add task" />
+    <input 
+      formControlName="title" 
+      matInput 
+      placeholder="Add task" 
+      (keyup.enter)="onAdd()"  
+    />
     <mat-hint class="text-tertiary">Press enter to add</mat-hint>
   </mat-form-field>
 
   <mat-form-field>
     <mat-label>Category</mat-label>
-    <mat-select (selectionChange)="selectionChangeHandler($event)">
+    <mat-select 
+      formControlName="categoryId"
+      (selectionChange)="selectionChangeHandler($event)"
+      (keyup.enter)="onAdd()"  
+    >
         @for (category of categories(); track category.id) {
           <mat-option value="{{ category.id }}">
             {{ category.name }}
