refactor inclusion form component; add loading state handling and snackbar notifications

--- a/crud-angular-19-master/src/app/features/tasks/components/inclusion-form/include-task-form/include-task-form.component.html
+++ b/crud-angular-19-master/src/app/features/tasks/components/inclusion-form/include-task-form/include-task-form.component.html
@@ -1,4 +1,8 @@
 <form 
+  [ngClass]="{
+    'cursor-not-allowed animate-pulse': isIncludeTaskFormDisabled(),
+    'cursor-pointer': !isIncludeTaskFormDisabled(),
+  }"
   [formGroup]="newTaskForm"
   autocomplete="off" 
   class="flex flex-row gap-2 select-none"
